# SolStitchFitCheck

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  INVITE_SETUP.md  OPERATIONS_RUNBOOK.md  PINNED_FITCHECK_MESSAGE.md  PINNED_WAITING_ROOM_MESSAGE.md  README.md  SMOKE_TEST.md  SMOKE_TEST_AIRLOCK.md  SMOKE_TEST_ROAST.md  pyproject.toml
docs/: SABLEPLATFORM_CONTRACT.md
sable_roles/: cli.py  config.py  main.py
sable_roles/features/: airlock.py  burn_me.py  delete_monitor.py  fitcheck_streak.py  image_hashing.py  reveal_pipeline.py  roast.py  scoring_pipeline.py  vibe_observer.py
sable_roles/prompts/: __init__.py  burn_me_system.py  scoring_system.py  vibe_infer_system.py
scripts/: migrate_sqlite_to_pg.py
tests/: conftest.py  test_airlock.py  test_burn_me_commands.py  test_burn_me_integration.py  test_burn_me_pipeline.py  test_burn_me_state.py  test_burn_mode_never.py  test_cli_backfill_blocklist.py  test_debounce_race.py  test_delete_monitor.py  test_dm_bank.py  test_dm_cooldown.py  test_format_streak.py  test_handler_resilience.py  test_image_detection.py  test_image_hashing.py  test_is_mod.py  test_maybe_roast_blocklist.py  test_my_roasts.py  test_peer_roast_report.py  test_personalize_toggle.py  test_reaction_recompute.py  test_relax_mode_behavior.py  test_relax_mode_command.py  test_reveal_pipeline.py  test_roast_mod_path.py  test_roast_peer_path.py  test_scoring_pipeline.py  test_scoring_state_machine.py  test_stop_pls_blocklist.py  test_streak_restoration.py  test_unconfigured_guild.py  test_vibe_inference.py  test_vibe_observer.py
